src/scss/App.scss
$drop-highlight-color: cornflowerblue;
$success-color: rgba(144, 238, 144, 1);
$success-outline: rgba(144, 238, 144, 0.5);
$headerfooter-background-color: whitesmoke;
$icon-color: cornflowerblue;
$border-color: dodgerblue;
$icon-size: 3.5em;
$icon-size-big: 10em;
$mini-icon-size: 20px;

body {
    min-height: 100vh;
    position: relative;
}

footer {
    position: absolute;
    bottom: 0;
    right: 0;
    text-align: right;
    padding-top: 1em;
    width: 100%;
    height: 60px;
    background-color: $headerfooter-background-color;

    // position: sticky;
    // bottom: 0;
    // z-index: 1000;
}

header {
    // position: sticky;
    // top: 0;
    // z-index: 1000;
    transition: height 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
    nav {
        background-color: $headerfooter-background-color;
    }
    &.collapsed {
        font-size: 0.5rem;
        .navbar {
            --bs-navbar-padding-y: 0.2rem;
        }
    }
}

.appcontent {
    margin-top: 6em;
    &::after {
        content: '';
        display: block;
        height: 4em; /* Set same as footer's height */
    }
}

.navbar-brand {
    white-space: normal;
    // text-align: center;
    word-break: break-all;
    font-size: 200%;
    padding-bottom: 0;

    .brandlogo {
        position: relative;
        top: -5px;
    }
    .hidden {
        visibility: hidden;
        font-size: 1px;
    }
}

.tab-main {
    min-height: 30vh;
    .row:first-child {
        z-index: 1;
        position: relative;
        a {
            .nav {
                flex-wrap: nowrap;
            }
        }
        .icon-link-hover {
            --bs-icon-link-transform: translate3d(0, -0.125rem, 0);
        }
    }
    .row:nth-child(2) {
        top: -1px;
    }
    .nav-item {
        .bi {
            margin-right: 0.25em;
        }
    }
    .tabheader {
        img,
        svg {
            height: $mini-icon-size;
            width: $mini-icon-size;
        }
    }
}

.tab-pane {
    min-height: 32vh;
    position: relative;
}

.tab-welcome {
    align-items: center;

    img.icon {
        height: $icon-size;
        width: $icon-size;
        margin: 0.2em;
    }

    .tranform-caret-icon {
        color: $icon-color;
        font-size: calc($icon-size * 0.5);
        display: inline-block;
        vertical-align: middle;
    }

    .drop-cloud-icon {
        font-size: $icon-size-big;
        color: $icon-color;
        line-height: 1em;
    }
}

.main-content.drop-active {
    background-image: repeating-linear-gradient(
            -60deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            30deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            120deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            210deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        );
    background-color: rgba($drop-highlight-color, 0.1);
    background-size: 3px calc(100% + 120px), calc(100% + 120px) 3px,
        3px calc(100% + 120px), calc(100% + 120px) 3px;
    background-position: 0 0, 0 0, 100% 0, 0 100%;
    background-repeat: no-repeat;
    animation: dropActive-borderAnimation 0.8s infinite linear;
    border-radius: 8px;
}

@keyframes dropActive-borderAnimation {
    from {
        background-position: 0 0, -120px 0, 100% -120px, 0 100%;
    }

    to {
        background-position: 0 -120px, 0 0, 100% 0, -120px 100%;
    }
}

@keyframes copysuccess-animation {
    from {
        outline: 0px solid $success-outline;
    }
    30% {
        outline: 6px solid $success-color;
    }
    90% {
        outline: 6px solid $success-color;
    }
    to {
        outline: 0px solid $success-outline;
    }
}

.code-top-container {
    position: absolute;
    top: 0;
    right: 0;
    white-space: nowrap;
    z-index: 1;

    .form-switch {
        display: inline-block;
    }

    .copy-button {
        cursor: pointer;
        border-radius: 5px;
        border: 1px lightgray solid;
        margin: 0.5em;
        z-index: 999;

        &.success {
            animation: copysuccess-animation 0.5s 1 ease-in;
            animation-delay: 0s;
            animation-fill-mode: forwards;
            -webkit-animation-fill-mode: forwards;
            outline: 2px solid lightgreen;
            background-color: hsl(120, 73%, 80%);
        }
    }
}

.svg-minimap {
    width: 30%;
    position: absolute;
    right: 0;
    top: 0;
    opacity: 0.3;
    z-index: 998;

    &:hover {
        opacity: 1;
    }
}

.preview-svg {
    overflow: hidden;
}

.code pre {
    font-family: 'Courier New', monospace;
    width: 100%;
    border: none;
    white-space: pre;
    margin-bottom: 0;
}

.example-content-button {
    background-color: #bed2f4 !important;
    color: black !important;
    text-decoration: none;
    font-weight: normal;
    display: inline-flex;
    align-items: center;
    img {
        margin-left: 0.5em;
        height: $mini-icon-size;
        width: $mini-icon-size;
        // opacity: 0.6;
        border-radius: 10px;
    }
    &:hover {
        // left: 2px;
        // bottom: 1px;
        // position: relative;
        background-color: #4a82eb !important;
        color: white !important;
        // outline: 2px solid #6495ed;
        img {
            // opacity: 1;
            outline: 2px solid #bed2f4;
        }
    }
}

.preview-callgraph.tab-pane.active {
    display: grid;
}
.callgraph {
    // @at-root .tab-pane:has(&) {
    //     display: grid;
    // }
    svg {
        width: 100%;
        height: 100%;
        .graph {
            .node {
                cursor: pointer;
            }
            .node:hover > polygon {
                stroke: blue;
                stroke-width: 3px;
            }
            .node > polygon {
                fill: white;
            }
            .node.selected > polygon {
                fill: lightblue;
            }
        }
    }
}

